force-app/main/default/objects/Action_Plan__c/Action_Plan__c.object-meta.xml
<CustomObject>
    <description>This object will store details about action plan assigned to a user</description>
    <label>Action Plan</label>
    <nameField>
        <displayFormat>APN-{00000000}</displayFormat>
        <label>Action Plan Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Action Plans</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>