force-app/main/default/objects/Action_Plan__c/fields/Action_Plan_Handling_Time__c.field-meta.xml
<CustomField>
    <fullName>Action_Plan_Handling_Time__c</fullName>
    <formula>Date_First_Child_AP_Assigned__c  -  Date_Advice_Request_Received__c</formula>
    <label>Action Plan Handling Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>