force-app/main/default/objects/Action_Plan__c/fields/Action_Plan_Type__c.field-meta.xml
<CustomField>
    <fullName>Action_Plan_Type__c</fullName>
    <formula>IF(ISBLANK(Parent_Action_Plan__c),
IMAGE(&quot;/resource/icons/parent.png&quot;, &quot;Parent&quot;, 20, 20),
IMAGE(&quot;/resource/icons/child.png&quot;, &quot;Child&quot;, 20, 20 ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Action Plan Type</label>
    <type>Text</type>
</CustomField>