force-app/main/default/objects/Action_Plan__c/fields/Active_Not_Overdue__c.field-meta.xml
<CustomField>
    <fullName>Active_Not_Overdue__c</fullName>
    <description>Checks if an Active (not completed) Action Plan has not yet passed its due date. Used for RMS Min Corro reporting (WI-0000475).</description>
    <formula>NOT(ISPICKVAL(Status__c, &#39;Completed&#39;)) 
&amp;&amp; 
NOT(ISBLANK(Due_Date__c)) 
&amp;&amp; 
(Due_Date__c &gt;= TODAY())</formula>
    <inlineHelpText>Checks if an Active (not completed) Action Plan has not yet passed its due date. Used for RMS Min Corro reporting.</inlineHelpText>
    <label>Active Not Overdue</label>
    <type>Checkbox</type>
</CustomField>