force-app/main/default/objects/Action_Plan__c/fields/ActualDaysOverdue__c.field-meta.xml
<CustomField>
    <fullName>ActualDaysOverdue__c</fullName>
    <description>Actual Days Overdue, will record a positive or negative number with (two decimal points) that records how many days the item is overdue or underdue (e.g. 1.5 days would equate to 1.5 days overdue, -2.73 would equate to nearly two and three quarters days ahead of the due date.) This will be calculated using business hours.</description>
    <label>Actual Days Overdue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>