force-app/main/default/objects/Action_Plan__c/fields/Agency__c.field-meta.xml
<CustomField>
    <fullName>Agency__c</fullName>
    <label>Agency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>HCF</fullName>
            </value>
            <value>
                <fullName>Serco</fullName>
            </value>
            <value>
                <fullName>TfNSW</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>