force-app/main/default/objects/Action_Plan__c/fields/Agency_Signatory__c.field-meta.xml
<CustomField>
    <fullName>Agency_Signatory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agency Signatory</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Staff</value>
        </filterItems>
        <filterItems>
            <field>Contact.Account.Type</field>
            <operation>equals</operation>
            <value>Division</value>
        </filterItems>
        <filterItems>
            <field>Contact.Account.Name</field>
            <operation>equals</operation>
            <valueField>$Source.Divisions__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Action Plans (Agency Signatory)</relationshipLabel>
    <relationshipName>Action_Plans3</relationshipName>
    <type>Lookup</type>
</CustomField>