force-app/main/default/objects/Action_Plan__c/fields/Agency_Signatory_Title__c.field-meta.xml
<CustomField>
    <fullName>Agency_Signatory_Title__c</fullName>
    <description>Agency signatory title - used on Agency Response action plans</description>
    <formula>Agency_Signatory__r.Title</formula>
    <label>Agency Signatory Title</label>
    <type>Text</type>
</CustomField>