force-app/main/default/objects/Action_Plan__c/fields/Amendment__c.field-meta.xml
<CustomField>
    <fullName>Amendment__c</fullName>
    <label># Amendment</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>