force-app/main/default/objects/Action_Plan__c/fields/Amendment_Reason__c.field-meta.xml
<CustomField>
    <fullName>Amendment_Reason__c</fullName>
    <label>Amendment Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Incorrect/Insufficient Information</fullName>
            </value>
            <value>
                <fullName>Punctuation/Grammar</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>