force-app/main/default/objects/Action_Plan__c/fields/APNumber__c.field-meta.xml
<CustomField>
    <fullName>APNumber__c</fullName>
    <formula>IF(
ISBLANK(Parent_Action_Plan__c),
OwnerId + &quot;-&quot; + Name + &quot;-&quot;,
Parent_Action_Plan__r.OwnerId + &quot;-&quot; + Parent_Action_Plan__r.Name + &quot;-&quot; + Name
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AP #</label>
    <type>Text</type>
</CustomField>