force-app/main/default/objects/Action_Plan__c/fields/Approval_Process_Help__c.field-meta.xml
<CustomField>
    <fullName>Approval_Process_Help__c</fullName>
    <formula>&quot;Please click &quot; + &quot;&#39;&quot; + &quot;In Progress&quot; + &quot;&#39;&quot; + &quot; button before clicking &quot; + &quot;&#39;&quot; + &quot;Submit for Approval&quot; + &quot;&#39;&quot; + &quot;.&quot; +  BR() +
&quot;If no approver is added below, then action plan owner will be prompted to add an approver after clicking &quot; + &quot;\&quot;&quot; + &quot;Submit for Approval&quot; + &quot;\&quot;&quot; + &quot; button.&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approval Process Help</label>
    <type>Text</type>
</CustomField>