force-app/main/default/objects/Action_Plan__c/fields/Approver_Level_1__c.field-meta.xml
<CustomField>
    <fullName>Approver_Level_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>First level nominated approver by Liaison officer.</description>
    <inlineHelpText>First level nominated approver by Liaison officer.</inlineHelpText>
    <label>Approver Level 1</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Approver_level_1</relationshipName>
    <type>Lookup</type>
</CustomField>