force-app/main/default/objects/Action_Plan__c/fields/Approver_Level_2__c.field-meta.xml
<CustomField>
    <fullName>Approver_Level_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Level 2 approver</description>
    <label>Approver Level 2</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Action_Plans1</relationshipName>
    <type>Lookup</type>
</CustomField>