force-app/main/default/objects/Action_Plan__c/fields/Approver_Level_3__c.field-meta.xml
<CustomField>
    <fullName>Approver_Level_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Nominated level 3 approver</description>
    <label>Approver Level 3</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Approver_level_3</relationshipName>
    <type>Lookup</type>
</CustomField>