force-app/main/default/objects/Action_Plan__c/fields/Assign_to_Agency__c.field-meta.xml
<CustomField>
    <fullName>Assign_to_Agency__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Hidden checkbox to be checked by the publisher action</description>
    <label>Assign to Agency</label>
    <type>Checkbox</type>
</CustomField>