force-app/main/default/objects/Action_Plan__c/fields/AssignedSME__c.field-meta.xml
<CustomField>
    <fullName>AssignedSME__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned SME</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1</booleanFilter>
        <filterItems>
            <field>$Source.Branch__c</field>
            <operation>equals</operation>
            <valueField>User.Branch__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Action_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>