force-app/main/default/objects/Action_Plan__c/fields/Awaiting_Signature_on_Time__c.field-meta.xml
<CustomField>
    <fullName>Awaiting_Signature_on_Time__c</fullName>
    <description>Checks if a  Action Plan was moved into &quot;Awaiting Signature&quot; on or before Due Date. Used for reporting (WI-0000378).</description>
    <formula>ISPICKVAL(Status__c, &#39;Awaiting Signature&#39;) 
&amp;&amp; 
NOT(ISBLANK( Date_stamp_on_Awaiting_Signature__c )) 
&amp;&amp; 
NOT(ISBLANK(Due_Date__c)) 
&amp;&amp; 
( DATEVALUE(Date_stamp_on_Awaiting_Signature__c) &lt;= Due_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Awaiting Signature on Time</label>
    <type>Checkbox</type>
</CustomField>