force-app/main/default/objects/Action_Plan__c/fields/Branch__c.field-meta.xml
<CustomField>
    <fullName>Branch__c</fullName>
    <label>Branch</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Divisions__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>ACCREDITATION</fullName>
            </value>
            <value>
                <fullName>Asset Standards Authority</fullName>
            </value>
            <value>
                <fullName>AUDIT &amp; RISK</fullName>
            </value>
            <value>
                <fullName>Boating Infrastructure</fullName>
            </value>
            <value>
                <fullName>BOATING OPERATIONS</fullName>
            </value>
            <value>
                <fullName>Brookvale Depot</fullName>
            </value>
            <value>
                <fullName>Bureau of Transport Statistics</fullName>
            </value>
            <value>
                <fullName>Burwood Depot</fullName>
            </value>
            <value>
                <fullName>Bus and Ferry Services Contracts</fullName>
            </value>
            <value>
                <fullName>Centre for Road and Maritime Safety</fullName>
            </value>
            <value>
                <fullName>CHIEF EXECUTIVE&#39;S OFFICE</fullName>
            </value>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>Commercial and Property Management</fullName>
            </value>
            <value>
                <fullName>Commercial and Strategy</fullName>
            </value>
            <value>
                <fullName>COMMERCIAL PROPERTY</fullName>
            </value>
            <value>
                <fullName>Commercial Services</fullName>
            </value>
            <value>
                <fullName>COMMUNICATION &amp; STAKEHOLD</fullName>
            </value>
            <value>
                <fullName>Communications</fullName>
            </value>
            <value>
                <fullName>Communications and Engagement</fullName>
            </value>
            <value>
                <fullName>Community Transport Agreements</fullName>
            </value>
            <value>
                <fullName>COMM VESSEL SURVEY</fullName>
            </value>
            <value>
                <fullName>Compliance</fullName>
            </value>
            <value>
                <fullName>COMPLIANCE OPERATIONS</fullName>
            </value>
            <value>
                <fullName>CONTRACT MANAGEMENT OFFICE</fullName>
            </value>
            <value>
                <fullName>Contracts, Agreements &amp; Revenue Protect</fullName>
            </value>
            <value>
                <fullName>Corporate</fullName>
            </value>
            <value>
                <fullName>Corporate and Project Finance</fullName>
            </value>
            <value>
                <fullName>Corporate Communications</fullName>
            </value>
            <value>
                <fullName>Corporate Planning &amp; Performance Info</fullName>
            </value>
            <value>
                <fullName>Country Rail Contracts</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>