force-app/main/default/objects/Action_Plan__c/fields/BusinessHours__c.field-meta.xml
<CustomField>
    <fullName>BusinessHours__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This will be the Business hours corresponding to the Agency/Division selected on the Action plan, if a corresponding , business hr is not found the default one will be set</description>
    <inlineHelpText>The business hrs followed by the Agency / Division</inlineHelpText>
    <label>Business Hours</label>
    <referenceTo>BusinessHours</referenceTo>
    <relationshipName>Action_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>