force-app/main/default/objects/Action_Plan__c/fields/Case_Creation_Date__c.field-meta.xml
<CustomField>
    <fullName>Case_Creation_Date__c</fullName>
    <formula>Parent_Case__r.CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Creation Date</label>
    <type>DateTime</type>
</CustomField>