force-app/main/default/objects/Action_Plan__c/fields/Case_Description__c.field-meta.xml
<CustomField>
    <fullName>Case_Description__c</fullName>
    <label>Case Description</label>
    <length>100000</length>
    <type>Html</type>
</CustomField>