force-app/main/default/objects/Action_Plan__c/fields/Case_Subject__c.field-meta.xml
<CustomField>
    <fullName>Case_Subject__c</fullName>
    <label>Case Subject</label>
    <type>TextArea</type>
</CustomField>