force-app/main/default/objects/Action_Plan__c/fields/CaseNumber__c.field-meta.xml
<CustomField>
    <fullName>CaseNumber__c</fullName>
    <description>Used to store the case number for parent action plan and child action plan. This field should not be added to the page layout.</description>
    <label>Case Number (For Search Results)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>