force-app/main/default/objects/Action_Plan__c/fields/CaseOwnerEmail__c.field-meta.xml
<CustomField>
    <fullName>CaseOwnerEmail__c</fullName>
    <label>Case Owner Email</label>
    <type>Email</type>
</CustomField>