force-app/main/default/objects/Action_Plan__c/fields/CasePriority__c.field-meta.xml
<CustomField>
    <fullName>CasePriority__c</fullName>
    <description>Priority copied down from case</description>
    <label>Case Priority</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>MP - Standard</fullName>
            </value>
            <value>
                <fullName>Individual - Standard</fullName>
            </value>
            <value>
                <fullName>Date Sensitive – MO specified due date</fullName>
            </value>
            <value>
                <fullName>Urgent – MO specified due date</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>