force-app/main/default/objects/Action_Plan__c/fields/Classification__c.field-meta.xml
<CustomField>
    <fullName>Classification__c</fullName>
    <description>Classification field: 
Routine (Agency / Division SME / Corrospondene Officer advice approval, MAGS Editor response approval) 
Significant (Agency / Division Manager advice approval, MAGS Editor response approval) 
Contentious (Agency / Division Senior Manager advice approval, MAGS Manager response approval) 
Highly Contentious (Agency / Division General Manager advice approval, MAGS Manager response approval) 
Confidential (Agency / division General Manager advice approval, MAGS Manager response approval, with added access restrictions)</description>
    <inlineHelpText>Case classification by MO</inlineHelpText>
    <label>Classification</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Routine</fullName>
            </value>
            <value>
                <fullName>Significant</fullName>
            </value>
            <value>
                <fullName>Contentious</fullName>
            </value>
            <value>
                <fullName>Highly Contentious</fullName>
            </value>
            <value>
                <fullName>Confidential</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>