force-app/main/default/objects/Action_Plan__c/fields/Closed_date__c.field-meta.xml
<CustomField>
    <fullName>Closed_date__c</fullName>
    <label>Closed date</label>
    <type>DateTime</type>
</CustomField>