force-app/main/default/objects/Action_Plan__c/fields/Completed_1_7_Days_Overdue__c.field-meta.xml
<CustomField>
    <fullName>Completed_1_7_Days_Overdue__c</fullName>
    <description>Checks if a Completed Action Plan was 1 to 7 days overdue compared to its due date. Used for RMS Min Corro reporting (WI-0000475).</description>
    <formula>ISPICKVAL( Status__c , &#39;Completed&#39;) 
&amp;&amp; 
NOT(ISBLANK(Date_Complete__c)) 
&amp;&amp; 
NOT(ISBLANK(Due_Date__c)) 
&amp;&amp; 
( CASE(MOD( Due_Date__c - DATE(1985,6,24),7), 
0 , CASE( MOD( Date_Complete__c - Due_Date__c ,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
1 , CASE( MOD( Date_Complete__c - Due_Date__c ,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
2 , CASE( MOD( Date_Complete__c - Due_Date__c ,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
3 , CASE( MOD( Date_Complete__c - Due_Date__c ,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
4 , CASE( MOD( Date_Complete__c - Due_Date__c ,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
5 , CASE( MOD( Date_Complete__c - Due_Date__c ,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
6 , CASE( MOD( Date_Complete__c - Due_Date__c ,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
999) 
+ 
(FLOOR(( Date_Complete__c - Due_Date__c )/7)*5) &gt; 1) 
&amp;&amp; 
( CASE(MOD( Due_Date__c - DATE(1985,6,24),7), 
0 , CASE( MOD( Date_Complete__c - Due_Date__c ,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
1 , CASE( MOD( Date_Complete__c - Due_Date__c ,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
2 , CASE( MOD( Date_Complete__c - Due_Date__c ,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
3 , CASE( MOD( Date_Complete__c - Due_Date__c ,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
4 , CASE( MOD( Date_Complete__c - Due_Date__c ,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
5 , CASE( MOD( Date_Complete__c - Due_Date__c ,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
6 , CASE( MOD( Date_Complete__c - Due_Date__c ,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
999) 
+ 
(FLOOR(( Date_Complete__c - Due_Date__c )/7)*5) &lt;= 8)</formula>
    <inlineHelpText>Checks if a Completed Action Plan was 1 to 7 days overdue compared to its due date. Used for RMS Min Corro reporting.</inlineHelpText>
    <label>Completed 1-7 Days Overdue</label>
    <type>Checkbox</type>
</CustomField>