force-app/main/default/objects/Action_Plan__c/fields/Completed_Child_Action_Plans__c.field-meta.xml
<CustomField>
    <fullName>Completed_Child_Action_Plans__c</fullName>
    <defaultValue>0</defaultValue>
    <label># Completed Child Action Plans</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>