force-app/main/default/objects/Action_Plan__c/fields/Completed_on_Time__c.field-meta.xml
<CustomField>
    <fullName>Completed_on_Time__c</fullName>
    <description>Checks if a Completed Action Plan was completed on or before Due Date. Used for RMS Min Corro reporting (WI-0000475).</description>
    <formula>ISPICKVAL(Status__c, &#39;Completed&#39;) 
&amp;&amp; 
NOT(ISBLANK(Date_Complete__c)) 
&amp;&amp; 
NOT(ISBLANK(Due_Date__c)) 
&amp;&amp; 
(Date_Complete__c &lt;= Due_Date__c)</formula>
    <inlineHelpText>Checks if a Completed Action Plan was completed on or before Due Date. Used for RMS Min Corro reporting.</inlineHelpText>
    <label>Completed on Time</label>
    <type>Checkbox</type>
</CustomField>